# resnet-intel-onednn

./: .gitignore  CMakeLists.txt  README.md  resnet.cpp
